fix initial nav bar layout issue and expand button fading in too soon

--- a/css/index.css
+++ b/css/index.css
@@ -98,8 +98,6 @@ button.mdl-button {
 
 #expand {
     position: fixed;
-    /*top: 7px;
-    right: 100px;*/
     opacity: 0;
 }
 
